updated documentation, function updated for utf8 conversion

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(compile)
 export(compile_to_utf8)
+export(correct)
 export(errorPlot_fields)
 export(errorPlot_states)
 export(errorTable)
@@ -11,7 +12,6 @@ export(proof)
 export(pullErrors)
 export(redFlags)
 export(tidy)
-export(to_utf8)
 export(youthHunters)
 import(dplyr)
 import(ggplot2)
