--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,6 +24,7 @@ Description: Easy-to-use functions specifically designed to handle biweekly HIP
     download data. A sequential process organizes state files into a tidy format
     and flags errors that should be inspected. Errors can be visualized in 
     simple plots and summarized in bite-sized tables.
+RdMacros: lifecycle
 License: CC0
 Encoding: UTF-8
 LazyData: true
