new function validate and corresponding updates to _bag col nams

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(proof)
 export(pullErrors)
 export(redFlags)
 export(tidy)
+export(validate)
 export(youthHunters)
 import(dplyr)
 import(ggplot2)
