--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(errorPlot_fields)
 export(errorPlot_states)
 export(errorTable)
 export(findDuplicates)
+export(investigate)
 export(outOfStateHunters)
 export(proof)
 export(pullErrors)
