new function writeReport for automated creation of summary Rmd reports

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,10 +9,10 @@ Imports:
     readr,
     tibble,
     ggplot2,
-    lifecycle
-Suggests:
-    knitr,
+    lifecycle,
     rmarkdown
+Suggests:
+    knitr
 VignetteBuilder: knitr
 Authors@R: 
     person(given = "Abby",
