--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,11 +15,13 @@ export(pullErrors)
 export(redFlags)
 export(tidy)
 export(validate)
+export(writeReport)
 export(youthHunters)
 import(dplyr)
 import(ggplot2)
 import(purrr)
 import(readr)
+import(rmarkdown)
 import(stringr)
 import(tibble)
 import(tidyr)
