updated to reflect replacement of compile and compile_to_utf8 with new function read_hip

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(investigate)
 export(outOfStateHunters)
 export(proof)
 export(pullErrors)
+export(read_hip)
 export(redFlags)
 export(tidy)
 export(validate)
