added new function strataCheck to determine if new strata have been created by submitting states

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(proof)
 export(pullErrors)
 export(read_hip)
 export(redFlags)
+export(strataCheck)
 export(tidy)
 export(validate)
 export(writeReport)
