added new function manualFix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(errorTable)
 export(findDuplicates)
 export(hunterSample)
 export(investigate)
+export(manualFix)
 export(outOfStateHunters)
 export(proof)
 export(pullErrors)
@@ -26,4 +27,7 @@ import(rmarkdown)
 import(stringr)
 import(tibble)
 import(tidyr)
+importFrom(dplyr,"%>%")
+importFrom(dplyr,mutate)
+importFrom(rlang,":=")
 importFrom(stats,reorder)
