updated code comments

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,11 @@ import(stringr)
 import(tibble)
 import(tidyr)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,distinct)
+importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
+importFrom(dplyr,pull)
+importFrom(dplyr,select)
 importFrom(rlang,":=")
 importFrom(stats,reorder)
+importFrom(stringr,str_detect)
