--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(errorPlot_fields)
 export(errorPlot_states)
 export(errorTable)
 export(findDuplicates)
+export(fixDuplicates)
 export(hunterSample)
 export(investigate)
 export(manualFix)
