--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,11 +29,22 @@ import(stringr)
 import(tibble)
 import(tidyr)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,across)
+importFrom(dplyr,arrange)
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
+importFrom(dplyr,lead)
+importFrom(dplyr,matches)
 importFrom(dplyr,mutate)
+importFrom(dplyr,mutate_at)
 importFrom(dplyr,pull)
 importFrom(dplyr,select)
+importFrom(dplyr,ungroup)
+importFrom(dplyr,vars)
 importFrom(rlang,":=")
 importFrom(stats,reorder)
 importFrom(stringr,str_detect)
+importFrom(stringr,str_replace)
