simplified imports to reduce function run time(s)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,20 +20,15 @@ export(tidy)
 export(validate)
 export(writeReport)
 export(youthHunters)
-import(dplyr)
-import(ggplot2)
-import(purrr)
-import(readr)
-import(rmarkdown)
-import(stringr)
-import(tibble)
-import(tidyr)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
 importFrom(dplyr,arrange)
+importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
 importFrom(dplyr,contains)
+importFrom(dplyr,count)
+importFrom(dplyr,cur_group_id)
 importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
@@ -42,26 +37,54 @@ importFrom(dplyr,lead)
 importFrom(dplyr,left_join)
 importFrom(dplyr,matches)
 importFrom(dplyr,mutate)
+importFrom(dplyr,mutate_all)
 importFrom(dplyr,mutate_at)
+importFrom(dplyr,n)
+importFrom(dplyr,na_if)
 importFrom(dplyr,pull)
+importFrom(dplyr,quo_name)
+importFrom(dplyr,relocate)
+importFrom(dplyr,rename)
 importFrom(dplyr,rename_at)
+importFrom(dplyr,row_number)
 importFrom(dplyr,select)
+importFrom(dplyr,slice_sample)
 importFrom(dplyr,summarize)
+importFrom(dplyr,sym)
+importFrom(dplyr,transmute)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,element_text)
+importFrom(ggplot2,expansion)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_text)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_fill_discrete)
 importFrom(ggplot2,scale_y_continuous)
+importFrom(ggplot2,stat)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_classic)
+importFrom(purrr,is_empty)
+importFrom(purrr,map_df)
+importFrom(purrr,map_dfr)
+importFrom(readr,fwf_widths)
+importFrom(readr,guess_encoding)
+importFrom(readr,read_fwf)
 importFrom(rlang,":=")
+importFrom(rmarkdown,render)
 importFrom(stats,reorder)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_extract)
 importFrom(stringr,str_remove)
 importFrom(stringr,str_remove_all)
 importFrom(stringr,str_replace)
+importFrom(stringr,str_split)
+importFrom(stringr,str_sub)
+importFrom(stringr,str_to_upper)
+importFrom(stringr,str_trim)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,separate)
+importFrom(tidyr,separate_rows)
+importFrom(tidyr,unite)
