tidy function: added rlang import, previously removed, to fix issue with x$11 rename using .data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ importFrom(readr,fwf_widths)
 importFrom(readr,guess_encoding)
 importFrom(readr,read_fwf)
 importFrom(rlang,":=")
+importFrom(rlang,.data)
 importFrom(rmarkdown,render)
 importFrom(stats,reorder)
 importFrom(stringr,str_detect)
