report templates: conversion of tibble outputs to scrollable/interactive tables using DT::datatable

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,8 @@ Imports:
     tibble,
     ggplot2,
     lifecycle,
-    rmarkdown
+    rmarkdown,
+    DT
 Suggests:
     knitr
 VignetteBuilder: knitr
