writeShiny function: new function added to the package because shiny figs are not visible in static html, and therefore we cant write documentation without including a blank rectangle; this function will write interactive shiny plots on demand, separate from the writeReport function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(redFlags)
 export(strataCheck)
 export(validate)
 export(writeReport)
+export(writeShiny)
 export(youthHunters)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
@@ -75,6 +76,7 @@ importFrom(readr,read_fwf)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(rmarkdown,render)
+importFrom(rmarkdown,run)
 importFrom(stats,reorder)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_extract)
