write_hip function: new function to output csv for db

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(strataCheck)
 export(validate)
 export(writeReport)
 export(writeShiny)
+export(write_hip)
 export(youthHunters)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
@@ -91,3 +92,4 @@ importFrom(tidyr,pivot_longer)
 importFrom(tidyr,separate)
 importFrom(tidyr,separate_rows)
 importFrom(tidyr,unite)
+importFrom(utils,write.csv)
