write_hip function: additional edits to final output file incorporated into the function; col name changes, date format, etc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,7 @@ importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,stat)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_classic)
+importFrom(lubridate,ymd)
 importFrom(purrr,is_empty)
 importFrom(purrr,map_df)
 importFrom(purrr,map_dfr)
