renameJulian function: new function created to rename HIP data named with the old file naming convention; converts julian dates to YYYYMMDD format that cooperates with read_hip

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(proof)
 export(pullErrors)
 export(read_hip)
 export(redFlags)
+export(renameJulian)
 export(strataCheck)
 export(validate)
 export(writeReport)
@@ -26,6 +27,7 @@ importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
 importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
+importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
 importFrom(dplyr,contains)
@@ -90,6 +92,7 @@ importFrom(stringr,str_split)
 importFrom(stringr,str_sub)
 importFrom(stringr,str_to_upper)
 importFrom(stringr,str_trim)
+importFrom(tibble,as_tibble)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,separate)
 importFrom(tidyr,separate_rows)
