--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(write_hip)
 export(youthHunters)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
+importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_cols)
@@ -36,13 +37,13 @@ importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
-importFrom(dplyr,lead)
 importFrom(dplyr,left_join)
 importFrom(dplyr,matches)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_all)
 importFrom(dplyr,mutate_at)
 importFrom(dplyr,n)
+importFrom(dplyr,n_distinct)
 importFrom(dplyr,na_if)
 importFrom(dplyr,pull)
 importFrom(dplyr,quo_name)
@@ -51,6 +52,7 @@ importFrom(dplyr,rename)
 importFrom(dplyr,rename_at)
 importFrom(dplyr,row_number)
 importFrom(dplyr,select)
+importFrom(dplyr,slice_sample)
 importFrom(dplyr,summarize)
 importFrom(dplyr,sym)
 importFrom(dplyr,transmute)
@@ -69,10 +71,13 @@ importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,stat)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_classic)
+importFrom(lubridate,mdy)
 importFrom(lubridate,ymd)
+importFrom(magrittr,"%<>%")
 importFrom(purrr,is_empty)
 importFrom(purrr,map_df)
 importFrom(purrr,map_dfr)
+importFrom(purrr,pmap_chr)
 importFrom(readr,fwf_widths)
 importFrom(readr,guess_encoding)
 importFrom(readr,read_fwf)
