renameFiles function: updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,7 @@ export(proof)
 export(pullErrors)
 export(read_hip)
 export(redFlags)
-export(renameJulian)
+export(renameFiles)
 export(strataCheck)
 export(validate)
 export(writeReport)
