--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ importFrom(dplyr,transmute)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,expansion)
 importFrom(ggplot2,geom_bar)
