read_hip function: bugs from converting to read.fwf worked out

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,9 +79,8 @@ importFrom(purrr,is_empty)
 importFrom(purrr,map_df)
 importFrom(purrr,map_dfr)
 importFrom(purrr,pmap_chr)
-importFrom(readr,fwf_widths)
+importFrom(purrr,set_names)
 importFrom(readr,guess_encoding)
-importFrom(readr,read_fwf)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(rmarkdown,render)
@@ -101,4 +100,5 @@ importFrom(tidyr,pivot_longer)
 importFrom(tidyr,separate)
 importFrom(tidyr,separate_rows)
 importFrom(tidyr,unite)
+importFrom(utils,read.fwf)
 importFrom(utils,write.csv)
