read_hip and read_hip2: reverted read_hip to pre-read.fwf change and added read_hip2 to handle the read.fwf growing pains

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,7 +80,9 @@ importFrom(purrr,map_df)
 importFrom(purrr,map_dfr)
 importFrom(purrr,pmap_chr)
 importFrom(purrr,set_names)
+importFrom(readr,fwf_widths)
 importFrom(readr,guess_encoding)
+importFrom(readr,read_fwf)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(rmarkdown,render)
