read_hip2 function: named correctly

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(outOfStateHunters)
 export(proof)
 export(pullErrors)
 export(read_hip)
+export(read_hip2)
 export(redFlags)
 export(renameFiles)
 export(strataCheck)
