sumLines function: new, to get nrow quota for read_hip

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(read_hip2)
 export(redFlags)
 export(renameFiles)
 export(strataCheck)
+export(sumLines)
 export(validate)
 export(writeReport)
 export(writeShiny)
