--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(read_hip)
 export(read_hip2)
 export(redFlags)
 export(renameFiles)
+export(shiftFix)
 export(strataCheck)
 export(sumLines)
 export(validate)
@@ -39,6 +40,7 @@ importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
+importFrom(dplyr,lead)
 importFrom(dplyr,left_join)
 importFrom(dplyr,matches)
 importFrom(dplyr,mutate)
@@ -54,6 +56,7 @@ importFrom(dplyr,rename)
 importFrom(dplyr,rename_at)
 importFrom(dplyr,row_number)
 importFrom(dplyr,select)
+importFrom(dplyr,slice)
 importFrom(dplyr,slice_sample)
 importFrom(dplyr,summarize)
 importFrom(dplyr,sym)
@@ -101,6 +104,7 @@ importFrom(stringr,str_to_upper)
 importFrom(stringr,str_trim)
 importFrom(tibble,as_tibble)
 importFrom(tidyr,pivot_longer)
+importFrom(tidyr,pivot_wider)
 importFrom(tidyr,separate)
 importFrom(tidyr,separate_rows)
 importFrom(tidyr,unite)
