--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: migbirdHarvestData
+Package: migbirdHIP
 Title: Process USFWS Migratory Bird Harvest Information Program Data in R
 Version: 1.1.0
 Imports: 
