write_hip function: switched from write.csv to write_csv to avoid line shift issues stemming from address formatting

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,6 +83,7 @@ importFrom(purrr,pmap_chr)
 importFrom(readr,fwf_widths)
 importFrom(readr,guess_encoding)
 importFrom(readr,read_fwf)
+importFrom(readr,write_csv)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(rmarkdown,render)
@@ -102,4 +103,3 @@ importFrom(tidyr,pivot_wider)
 importFrom(tidyr,separate)
 importFrom(tidyr,separate_rows)
 importFrom(tidyr,unite)
-importFrom(utils,write.csv)
