write_hip function: added ability to export data in a series of .csv files (1 per source file) rather than one large .csv; switched from write_csv to fwrite for speed

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(validate)
 export(writeReport)
 export(write_hip)
 export(youthHunters)
+importFrom(data.table,fwrite)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
 importFrom(dplyr,anti_join)
@@ -74,12 +75,12 @@ importFrom(ggplot2,stat)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_classic)
 importFrom(lubridate,mdy)
-importFrom(lubridate,ymd)
 importFrom(magrittr,"%<>%")
 importFrom(purrr,is_empty)
 importFrom(purrr,map_df)
 importFrom(purrr,map_dfr)
 importFrom(purrr,pmap_chr)
+importFrom(purrr,walk)
 importFrom(readr,fwf_widths)
 importFrom(readr,guess_encoding)
 importFrom(readr,read_fwf)
