--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,6 +2,7 @@ Package: migbirdHIP
 Title: Process USFWS Migratory Bird Harvest Information Program Data in R
 Version: 1.2.4
 Imports: 
+    data.table,
     dplyr,
     tidyr,
     stringr,
