--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ importFrom(dplyr,across)
 importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
+importFrom(dplyr,as_tibble_col)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
@@ -59,7 +60,6 @@ importFrom(dplyr,slice)
 importFrom(dplyr,slice_sample)
 importFrom(dplyr,summarize)
 importFrom(dplyr,sym)
-importFrom(dplyr,transmute)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
 importFrom(ggplot2,aes)
