--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,7 +29,6 @@ importFrom(dplyr,across)
 importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
-importFrom(dplyr,as_tibble_col)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
@@ -99,6 +98,7 @@ importFrom(stringr,str_sub)
 importFrom(stringr,str_to_upper)
 importFrom(stringr,str_trim)
 importFrom(tibble,as_tibble)
+importFrom(tibble,as_tibble_col)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,separate)
