issueCheck function: added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(errorTable)
 export(findDuplicates)
 export(fixDuplicates)
 export(investigate)
+export(issueCheck)
 export(manualFix)
 export(outOfStateHunters)
 export(proof)
@@ -73,6 +74,7 @@ importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,stat)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_classic)
+importFrom(lubridate,interval)
 importFrom(lubridate,mdy)
 importFrom(magrittr,"%<>%")
 importFrom(purrr,is_empty)
@@ -104,3 +106,4 @@ importFrom(tidyr,pivot_wider)
 importFrom(tidyr,separate)
 importFrom(tidyr,separate_rows)
 importFrom(tidyr,unite)
+importFrom(utils,write.csv)
