issueCheck function: added import for %within%

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,6 +74,7 @@ importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,stat)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_classic)
+importFrom(lubridate,"%within%")
 importFrom(lubridate,interval)
 importFrom(lubridate,mdy)
 importFrom(magrittr,"%<>%")
