--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,8 @@ importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
+importFrom(dplyr,if_all)
+importFrom(dplyr,if_any)
 importFrom(dplyr,lead)
 importFrom(dplyr,left_join)
 importFrom(dplyr,matches)
