issueCheck function: updated to evaluate both registration_yr and issue_date fields; now returns a plot when specified; new param for past_path writes out past data to given directory and writeReport reads in past data to disseminate information in dl_report

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,13 +65,21 @@ importFrom(dplyr,sym)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,element_line)
+importFrom(ggplot2,element_rect)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,expansion)
 importFrom(ggplot2,geom_bar)
+importFrom(ggplot2,geom_boxplot)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_rect)
 importFrom(ggplot2,geom_text)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_fill_discrete)
+importFrom(ggplot2,scale_fill_manual)
+importFrom(ggplot2,scale_shape_manual)
+importFrom(ggplot2,scale_x_date)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,stat)
 importFrom(ggplot2,theme)
@@ -104,6 +112,7 @@ importFrom(stringr,str_to_upper)
 importFrom(stringr,str_trim)
 importFrom(tibble,as_tibble)
 importFrom(tibble,as_tibble_col)
+importFrom(tibble,tibble)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,separate)
