glyphFinder function: added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(errorPlot_states)
 export(errorTable)
 export(findDuplicates)
 export(fixDuplicates)
+export(glyphFinder)
 export(investigate)
 export(issueCheck)
 export(manualFix)
@@ -99,6 +100,7 @@ importFrom(readr,read_fwf)
 importFrom(readr,write_csv)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
+importFrom(rlang,sym)
 importFrom(rmarkdown,render)
 importFrom(stats,reorder)
 importFrom(stringr,str_detect)
