--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,22 +1,26 @@
 Package: migbirdHIP
 Title: Process USFWS Migratory Bird Harvest Information Program Data in R
-Version: 1.2.6
+Version: 1.2.7
 Imports: 
     data.table,
     dplyr,
-    tidyr,
-    stringr,
+    ggplot2,
+    lubridate,
+    magrittr,
     purrr,
     readr,
-    magrittr,
     rlang,
-    lubridate,
+    rmarkdown,
+    stats,
+    stringr,
     tibble,
-    ggplot2,
-    lifecycle,
-    rmarkdown
+    tidyr,
+    utils
 Suggests:
-    knitr
+    DT,
+    kableExtra,
+    knitr,
+    stringi
 VignetteBuilder: knitr
 Authors@R: 
     person(given = "Abby",
@@ -28,7 +32,6 @@ Description: Easy-to-use functions specifically designed to handle biweekly HIP
     download data. A sequential process organizes state files into a tidy format
     and flags errors that should be inspected. Errors can be visualized in 
     simple plots and summarized in bite-sized tables.
-RdMacros: lifecycle
 License: CC0
 Encoding: UTF-8
 LazyData: true
