writeReport function: added import for quarto_render

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,6 +94,7 @@ importFrom(purrr,map_df)
 importFrom(purrr,map_dfr)
 importFrom(purrr,pmap_chr)
 importFrom(purrr,walk)
+importFrom(quarto,quarto_render)
 importFrom(readr,fwf_widths)
 importFrom(readr,guess_encoding)
 importFrom(readr,read_fwf)
