fileCheck: new function added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(errorPlot_dl)
 export(errorPlot_fields)
 export(errorPlot_states)
 export(errorTable)
+export(fileCheck)
 export(findDuplicates)
 export(fixDuplicates)
 export(glyphFinder)
