read_hip function: removed na_if() and replaced with na param in read_fwf()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(errorTable)
 export(fileCheck)
 export(findDuplicates)
 export(fixDuplicates)
+export(glyphCheck)
 export(glyphFinder)
 export(investigate)
 export(issueCheck)
@@ -52,7 +53,6 @@ importFrom(dplyr,mutate_all)
 importFrom(dplyr,mutate_at)
 importFrom(dplyr,n)
 importFrom(dplyr,n_distinct)
-importFrom(dplyr,na_if)
 importFrom(dplyr,pull)
 importFrom(dplyr,quo_name)
 importFrom(dplyr,relocate)
