added shiftCheck() function and added it to a new shifts.R file with existing shiftFix() function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(pullErrors)
 export(read_hip)
 export(redFlags)
 export(renameFiles)
+export(shiftCheck)
 export(shiftFix)
 export(strataCheck)
 export(sumLines)
@@ -42,6 +43,7 @@ importFrom(dplyr,cur_group_id)
 importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
+importFrom(dplyr,glimpse)
 importFrom(dplyr,group_by)
 importFrom(dplyr,if_all)
 importFrom(dplyr,if_any)
