--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,7 @@ Imports:
     ggplot2 (>= 3.4.2),
     lubridate (>= 1.8.0),
     purrr (>= 0.3.4),
+    quarto (>= 1.2.0),
     readr (>= 2.1.4),
     rlang (>= 1.0.6),
     rmarkdown (>= 2.14),
