--- a/NAMESPACE
+++ b/NAMESPACE
@@ -121,5 +121,6 @@ importFrom(tidyr,pivot_wider)
 importFrom(tidyr,separate)
 importFrom(tidyr,separate_rows)
 importFrom(tidyr,separate_wider_delim)
+importFrom(tidyr,starts_with)
 importFrom(tidyr,unite)
 importFrom(utils,write.csv)
