write_hip function: heavily revised to eliminate redundancy
replaced old repeated left_join() with a for loop; opted for base R rather than purrr::reduce(left_join) due to speed, since for loop was consistently 1 to 2 s faster than purrr::reduce (similar to speed before this commit); replaced %>% with |>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -91,6 +91,7 @@ importFrom(ggplot2,theme_classic)
 importFrom(lubridate,"%within%")
 importFrom(lubridate,interval)
 importFrom(lubridate,mdy)
+importFrom(purrr,map)
 importFrom(purrr,map_df)
 importFrom(purrr,map_dfr)
 importFrom(purrr,pmap_chr)
@@ -98,7 +99,6 @@ importFrom(purrr,walk)
 importFrom(quarto,quarto_render)
 importFrom(readr,fwf_widths)
 importFrom(readr,read_fwf)
-importFrom(readr,write_csv)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(rlang,sym)
