--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,7 +29,6 @@ export(writeReport)
 export(write_hip)
 export(youthHunters)
 importFrom(data.table,fwrite)
-importFrom(dplyr,"%>%")
 importFrom(dplyr,across)
 importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
@@ -57,6 +56,7 @@ importFrom(dplyr,n)
 importFrom(dplyr,n_distinct)
 importFrom(dplyr,pull)
 importFrom(dplyr,quo_name)
+importFrom(dplyr,reframe)
 importFrom(dplyr,relocate)
 importFrom(dplyr,rename)
 importFrom(dplyr,rename_at)
@@ -119,7 +119,7 @@ importFrom(tibble,tibble)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,separate)
-importFrom(tidyr,separate_rows)
+importFrom(tidyr,separate_longer_delim)
 importFrom(tidyr,separate_wider_delim)
 importFrom(tidyr,starts_with)
 importFrom(tidyr,unite)
