renameFiles function: replaced superseded tidyr::separate() with tidyr::separate_wider_pisition()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -118,9 +118,9 @@ importFrom(tibble,as_tibble_col)
 importFrom(tibble,tibble)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
-importFrom(tidyr,separate)
 importFrom(tidyr,separate_longer_delim)
 importFrom(tidyr,separate_wider_delim)
+importFrom(tidyr,separate_wider_position)
 importFrom(tidyr,starts_with)
 importFrom(tidyr,unite)
 importFrom(utils,write.csv)
