--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,7 +32,6 @@ importFrom(data.table,fwrite)
 importFrom(dplyr,across)
 importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
-importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
@@ -116,6 +115,7 @@ importFrom(stringr,str_trim)
 importFrom(tibble,as_tibble)
 importFrom(tibble,as_tibble_col)
 importFrom(tibble,tibble)
+importFrom(tidyr,as_tibble)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,separate_longer_delim)
