--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,7 @@ importFrom(dplyr,sym)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,after_stat)
 importFrom(ggplot2,element_line)
 importFrom(ggplot2,element_rect)
 importFrom(ggplot2,element_text)
@@ -83,7 +84,6 @@ importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,scale_shape_manual)
 importFrom(ggplot2,scale_x_date)
 importFrom(ggplot2,scale_y_continuous)
-importFrom(ggplot2,stat)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_classic)
 importFrom(lubridate,"%within%")
