--- a/NAMESPACE
+++ b/NAMESPACE
@@ -89,6 +89,7 @@ importFrom(ggplot2,theme_classic)
 importFrom(lubridate,"%within%")
 importFrom(lubridate,interval)
 importFrom(lubridate,mdy)
+importFrom(purrr,list_rbind)
 importFrom(purrr,map)
 importFrom(purrr,map_df)
 importFrom(purrr,map_dfr)
