identicalBags function: created

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(findDuplicates)
 export(fixDuplicates)
 export(glyphCheck)
 export(glyphFinder)
+export(identicalBags)
 export(investigate)
 export(issueCheck)
 export(manualFix)
@@ -43,6 +44,7 @@ importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,glimpse)
 importFrom(dplyr,group_by)
+importFrom(dplyr,group_split)
 importFrom(dplyr,if_all)
 importFrom(dplyr,if_any)
 importFrom(dplyr,lead)
@@ -113,6 +115,7 @@ importFrom(tibble,as_tibble)
 importFrom(tibble,as_tibble_col)
 importFrom(tibble,tibble)
 importFrom(tidyr,as_tibble)
+importFrom(tidyr,expand_grid)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,separate_longer_delim)
