--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ importFrom(dplyr,group_by)
 importFrom(dplyr,group_split)
 importFrom(dplyr,if_all)
 importFrom(dplyr,if_any)
+importFrom(dplyr,inner_join)
 importFrom(dplyr,lead)
 importFrom(dplyr,left_join)
 importFrom(dplyr,matches)
