--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(write_hip)
 export(youthHunters)
 importFrom(data.table,fwrite)
 importFrom(dplyr,across)
+importFrom(dplyr,all_of)
 importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
@@ -52,7 +53,6 @@ importFrom(dplyr,left_join)
 importFrom(dplyr,matches)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_all)
-importFrom(dplyr,mutate_at)
 importFrom(dplyr,n)
 importFrom(dplyr,n_distinct)
 importFrom(dplyr,pull)
