--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(read_hip)
 export(redFlags)
 export(renameFiles)
 export(shiftCheck)
+export(shiftFinder)
 export(shiftFix)
 export(strataCheck)
 export(sumLines)
@@ -42,7 +43,6 @@ importFrom(dplyr,cur_group_id)
 importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
-importFrom(dplyr,glimpse)
 importFrom(dplyr,group_by)
 importFrom(dplyr,group_split)
 importFrom(dplyr,if_all)
@@ -104,6 +104,7 @@ importFrom(rlang,sym)
 importFrom(stats,reorder)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_extract)
+importFrom(stringr,str_length)
 importFrom(stringr,str_remove)
 importFrom(stringr,str_remove_all)
 importFrom(stringr,str_replace)
