--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,6 +90,7 @@ importFrom(ggplot2,theme_classic)
 importFrom(lubridate,"%within%")
 importFrom(lubridate,interval)
 importFrom(lubridate,mdy)
+importFrom(lubridate,years)
 importFrom(purrr,list_rbind)
 importFrom(purrr,map)
 importFrom(purrr,map_dfr)
@@ -122,4 +123,3 @@ importFrom(tidyr,separate_wider_delim)
 importFrom(tidyr,separate_wider_position)
 importFrom(tidyr,starts_with)
 importFrom(tidyr,unite)
-importFrom(utils,write.csv)
