globals: added import for tidyr::everything(); added import for utils::globalVariables

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -115,6 +115,7 @@ importFrom(stringr,str_trim)
 importFrom(tibble,as_tibble)
 importFrom(tibble,as_tibble_col)
 importFrom(tibble,tibble)
+importFrom(tidyr,everything)
 importFrom(tidyr,expand_grid)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
@@ -123,3 +124,4 @@ importFrom(tidyr,separate_wider_delim)
 importFrom(tidyr,separate_wider_position)
 importFrom(tidyr,starts_with)
 importFrom(tidyr,unite)
+importFrom(utils,globalVariables)
