--- a/NAMESPACE
+++ b/NAMESPACE
@@ -91,6 +91,7 @@ importFrom(lubridate,"%within%")
 importFrom(lubridate,interval)
 importFrom(lubridate,mdy)
 importFrom(lubridate,years)
+importFrom(lubridate,ymd)
 importFrom(purrr,list_rbind)
 importFrom(purrr,map)
 importFrom(purrr,map_dfr)
