correct function: filter out any record with 0 in every bag field

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -113,6 +113,7 @@ importFrom(stringr,str_trim)
 importFrom(tibble,as_tibble)
 importFrom(tibble,as_tibble_col)
 importFrom(tibble,tibble)
+importFrom(tidyr,all_of)
 importFrom(tidyr,everything)
 importFrom(tidyr,expand_grid)
 importFrom(tidyr,pivot_longer)
