--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ importFrom(dplyr,across)
 importFrom(dplyr,all_of)
 importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
+importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
@@ -52,6 +53,7 @@ importFrom(dplyr,row_number)
 importFrom(dplyr,select)
 importFrom(dplyr,slice_sample)
 importFrom(dplyr,summarize)
+importFrom(dplyr,tibble)
 importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
 importFrom(ggplot2,aes)
@@ -96,9 +98,6 @@ importFrom(stringr,str_remove_all)
 importFrom(stringr,str_replace)
 importFrom(stringr,str_to_upper)
 importFrom(stringr,str_trim)
-importFrom(tibble,as_tibble)
-importFrom(tibble,as_tibble_col)
-importFrom(tibble,tibble)
 importFrom(tidyr,all_of)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,separate_longer_delim)
