functions renamed to camelCase; plotDuplicates created and split from findDuplicates; redFlags moved from its own file to errorPlots.R since it is no longer exported and uses internal functions documented there

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,9 @@
 
 export(clean)
 export(correct)
-export(errorPlot_dl)
-export(errorPlot_fields)
-export(errorPlot_states)
+export(errorPlotDL)
+export(errorPlotFields)
+export(errorPlotStates)
 export(errorTable)
 export(fileCheck)
 export(findDuplicates)
@@ -12,6 +12,7 @@ export(fixDuplicates)
 export(glyphCheck)
 export(issueCheck)
 export(outOfStateHunters)
+export(plotDuplicates)
 export(proof)
 export(pullErrors)
 export(read_hip)
