overhauled duplicate functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,17 +2,16 @@
 
 export(clean)
 export(correct)
+export(duplicateFinder)
+export(duplicateFix)
+export(duplicatePlot)
 export(errorPlotDL)
 export(errorPlotFields)
 export(errorPlotStates)
 export(errorTable)
 export(fileCheck)
-export(findDuplicates)
-export(fixDuplicates)
 export(glyphCheck)
 export(issueCheck)
-export(outOfStateHunters)
-export(plotDuplicates)
 export(proof)
 export(pullErrors)
 export(read_hip)
@@ -21,7 +20,6 @@ export(shiftCheck)
 export(strataCheck)
 export(writeReport)
 export(write_hip)
-export(youthHunters)
 importFrom(data.table,fwrite)
 importFrom(dplyr,across)
 importFrom(dplyr,all_of)
