renamed renameFiles to fileRename
moved function to files.R, to be grouped with fileCheck

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,12 +10,12 @@ export(errorPlotFields)
 export(errorPlotStates)
 export(errorTable)
 export(fileCheck)
+export(fileRename)
 export(glyphCheck)
 export(issueCheck)
 export(proof)
 export(pullErrors)
 export(read_hip)
-export(renameFiles)
 export(shiftCheck)
 export(strataCheck)
 export(writeReport)
