--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ importFrom(dplyr,count)
 importFrom(dplyr,cur_group_id)
 importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
+importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,if_all)
@@ -41,7 +42,6 @@ importFrom(dplyr,inner_join)
 importFrom(dplyr,left_join)
 importFrom(dplyr,matches)
 importFrom(dplyr,mutate)
-importFrom(dplyr,mutate_all)
 importFrom(dplyr,n)
 importFrom(dplyr,n_distinct)
 importFrom(dplyr,pull)
@@ -80,7 +80,6 @@ importFrom(lubridate,mdy)
 importFrom(lubridate,ymd)
 importFrom(purrr,list_rbind)
 importFrom(purrr,map)
-importFrom(purrr,map_dfr)
 importFrom(purrr,pmap_chr)
 importFrom(purrr,walk)
 importFrom(quarto,quarto_render)
