added constants.R; added inLinePermitDNHMessage function; renamed specialOregonHuntYCheck to inLinePermitDNHFix
constants.R allows multiple functions to use the same logical constants and other data processing rules by sourcing them from one place

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -86,6 +86,7 @@ importFrom(quarto,quarto_render)
 importFrom(readr,fwf_widths)
 importFrom(readr,read_fwf)
 importFrom(rlang,":=")
+importFrom(rlang,expr)
 importFrom(rlang,sym)
 importFrom(stats,reorder)
 importFrom(stringr,str_detect)
