--- a/NAMESPACE
+++ b/NAMESPACE
@@ -88,6 +88,7 @@ importFrom(readr,read_fwf)
 importFrom(rlang,":=")
 importFrom(rlang,expr)
 importFrom(rlang,sym)
+importFrom(rlang,syms)
 importFrom(stats,reorder)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_extract)
