--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,7 +43,6 @@ importFrom(dplyr,left_join)
 importFrom(dplyr,matches)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
-importFrom(dplyr,n_distinct)
 importFrom(dplyr,pull)
 importFrom(dplyr,reframe)
 importFrom(dplyr,relocate)
@@ -78,6 +77,7 @@ importFrom(lubridate,"%within%")
 importFrom(lubridate,interval)
 importFrom(lubridate,mdy)
 importFrom(lubridate,ymd)
+importFrom(purrr,discard)
 importFrom(purrr,list_rbind)
 importFrom(purrr,map)
 importFrom(purrr,pmap_chr)
@@ -90,6 +90,7 @@ importFrom(rlang,expr)
 importFrom(rlang,sym)
 importFrom(rlang,syms)
 importFrom(stats,reorder)
+importFrom(stringr,str_c)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_extract)
 importFrom(stringr,str_length)
