duplicates functions: updated params, imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ importFrom(dplyr,left_join)
 importFrom(dplyr,matches)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
+importFrom(dplyr,pick)
 importFrom(dplyr,pull)
 importFrom(dplyr,reframe)
 importFrom(dplyr,relocate)
