import utils packageVersion

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -106,3 +106,4 @@ importFrom(tidyr,separate_wider_delim)
 importFrom(tidyr,separate_wider_position)
 importFrom(tidyr,unite)
 importFrom(utils,globalVariables)
+importFrom(utils,packageVersion)
