added more ignores

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .DS_Store
+^Thumbs.db$
 
 # History files
 .Rhistory
@@ -21,12 +22,15 @@
 # RStudio files
 .Rproj.user/
 
-# produced vignettes
+# Vignettes
+vignettes/*.R
 vignettes/*.html
 vignettes/*.pdf
+inst/doc
 
 # Quarto
 .quarto
+*.qmd
 
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
