begin data masking

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -88,6 +88,7 @@ importFrom(quarto,quarto_render)
 importFrom(readr,fwf_widths)
 importFrom(readr,read_fwf)
 importFrom(rlang,":=")
+importFrom(rlang,.data)
 importFrom(rlang,expr)
 importFrom(rlang,sym)
 importFrom(rlang,syms)
