--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(read_hip)
 export(shiftCheck)
 export(writeReport)
 export(write_hip)
+importFrom(assertthat,assert_that)
 importFrom(data.table,fwrite)
 importFrom(dplyr,across)
 importFrom(dplyr,all_of)
@@ -90,6 +91,7 @@ importFrom(readr,read_fwf)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(rlang,expr)
+importFrom(rlang,is_integerish)
 importFrom(rlang,sym)
 importFrom(rlang,syms)
 importFrom(stats,reorder)
