read_hip: add message that reports how long it took to read in N number of files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,7 @@ importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_classic)
 importFrom(lubridate,"%within%")
 importFrom(lubridate,interval)
+importFrom(lubridate,make_difftime)
 importFrom(lubridate,mdy)
 importFrom(lubridate,ymd)
 importFrom(purrr,discard)
