issuePlot: improve visualization of issue dates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,21 +57,22 @@ importFrom(dplyr,starts_with)
 importFrom(dplyr,summarize)
 importFrom(dplyr,tibble)
 importFrom(dplyr,ungroup)
+importFrom(ggnewscale,new_scale_color)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,after_stat)
+importFrom(ggplot2,coord_cartesian)
 importFrom(ggplot2,element_line)
 importFrom(ggplot2,element_rect)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,expansion)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_boxplot)
-importFrom(ggplot2,geom_point)
-importFrom(ggplot2,geom_rect)
+importFrom(ggplot2,geom_segment)
 importFrom(ggplot2,geom_text)
+importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
-importFrom(ggplot2,scale_fill_manual)
-importFrom(ggplot2,scale_shape_manual)
+importFrom(ggplot2,scale_color_manual)
 importFrom(ggplot2,scale_x_date)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
