--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,7 @@ Imports:
     assertthat (>= 0.2.1),
     data.table (>= 1.17.0),
     dplyr (>= 1.1.4),
+    ggnewscale (>= 0.5.2),
     ggplot2 (>= 3.5.1),
     lubridate (>= 1.9.4),
     purrr (>= 1.0.4),
