--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,29 +12,29 @@ Depends:
     R (>= 4.4.0)
 Imports: 
     assertthat (>= 0.2.1),
-    data.table (>= 1.17.0),
+    data.table (>= 1.17.8),
     dplyr (>= 1.1.4),
     ggnewscale (>= 0.5.2),
-    ggplot2 (>= 3.5.1),
+    ggplot2 (>= 3.5.2),
     lubridate (>= 1.9.4),
-    purrr (>= 1.0.4),
-    quarto (>= 1.4.4),
+    purrr (>= 1.1.0),
+    quarto (>= 1.5.0),
     readr (>= 2.1.5),
-    rlang (>= 1.1.3),
-    stats (>= 4.4.0),
+    rlang (>= 1.1.6),
+    stats (>= 4.5.0),
     stringr (>= 1.5.1),
     tidyr (>= 1.3.1),
-    utils (>= 4.4.0)
+    utils (>= 4.5.0)
 Suggests:
-    DT,
+    DT (>= 0.33),
     here (>= 1.0.1),
-    kableExtra,
-    knitr,
-    rmarkdown,
-    sf,
-    spelling,
-    stringi,
-    testthat (>= 3.0.0)
+    kableExtra (>= 1.4.0),
+    knitr (>= 1.5.0),
+    rmarkdown (>= 2.29),
+    sf (>= 1.0-21),
+    spelling (>= 2.3.1),
+    stringi (>= 1.8.7),
+    testthat (>= 3.2.3)
 VignetteBuilder: 
     knitr
 Config/testthat/edition: 3
