--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,8 +80,8 @@ importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_classic)
 importFrom(lubridate,"%within%")
 importFrom(lubridate,interval)
-importFrom(lubridate,make_difftime)
 importFrom(lubridate,mdy)
+importFrom(lubridate,time_length)
 importFrom(lubridate,ymd)
 importFrom(purrr,discard)
 importFrom(purrr,list_rbind)
